# call_me_maybe

./: README.md  dif1  dif2  here  makefile  pyproject.toml  test.py  test1  test2  think_process
data/input/: function_calling_tests.json  functions_definition.json  te
data/output/: out.txt  output.txt
llm_sdk/: __init__.py
src/: __main__.py  function_call.py  json_io.py  llm_interaction.py  restrained_decoding.py  utils.py
